macviews: fix separator heights

When I adjusted the separator height and thickness for material menus, I forgot
to also adjust these constants. Set them to 9 - 1pt of line and 8pt of padding,
since the full separators have 8pt on either side. The "spacing" separator is
also 9 despite having no line, for visual consistency with the ones that do
have lines.

Bug: 831201
Change-Id: I14ed22823d7af9f6194281ef914ca64395feca31
Reviewed-on: https://chromium-review.googlesource.com/1017063
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551825}
Former-commit-id: d2cf70461093c265efbd23d7ff7a7b4431c66bd3